Wed Sep 29 12:08:58 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
	Add ccm_noevent option, default 0, events in CCM are enabled.
        If set, events in CCM are disabled.

Tue Sep 28 18:48:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS3/jaws3-todo:
          Removed, todo for years now

Tue Sep 28 18:16:52 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * performance-tests/TCP/tcp_test.cpp:

          If the 1st char of the host name is a digit, need to set the IP
          address and port as network byte order since that is what's
          returned from ACE_OS::inet_addr().

Tue Sep 28 11:34:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_Connector.cpp:
        * ace/Barrier.h:
        * ace/Barrier.cpp:
        * ace/Condition_Thread_Mutex.h:
        * ace/Condition_Thread_Mutex.inl:
        * ace/Containers_T.cpp:
        * ace/Functor.h:
        * ace/Functor.inl:
        * ace/IO_Cntl_Msg.cpp:
        * ace/Intrusive_List.cpp:
        * ace/Local_Tokens.inl:
        * ace/MEM_IO.cpp:
        * ace/MEM_Stream.h:
        * ace/MEM_Stream.inl:
        * ace/Malloc_T.inl:
        * ace/OS_NS_Thread.inl:
        * ace/OS_NS_string.inl:
        * ace/Object_Manager_Base.cpp:
        * ace/POSIX_Proactor.cpp:
        * ace/Ping_Socket.cpp:
        * ace/Signal.inl:
        * ace/Throughput_Stats.h:
        * ace/Throughput_Stats.cpp:
        * ace/Time_Value.cpp:
        * ace/Timer_Hash_T.cpp:
        * ace/Timer_Heap_T.cpp:
        * ace/Vector_T.h:
        * ace/Vector_T.cpp:
        * ace/config-linux-common.h:
          Removed code that was ifdefed out for years now

Tue Sep 28 08:31:37 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * performance-tests/Misc/test_guard.cpp:
        * tests/ACE_Test.cpp:
        * examples/Reactor/TP_Reactor/client.cpp:
          Fixed compilation errors with missing includes.
